# python-boilerplate

./: .gitignore  .travis.yml  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: usage.md
scripts/: hello_world.py
src/boilerplate/: __init__.py
src/main/package/: __init__.py
src/package/: base.py
src/tests/: base.py  test_division.py  test_exceptions.py  test_integers.py  test_meta.py  test_strings.py
tests/: test_boilerplate.py
