[tool.poetry]
name = "boilerplate"
version = "0.0.1.dev0"
description = "A boilerplate for creating python 3 projects and libraries."
url="https://github.com/alexbahnisch/python-boilerplate"
authors = ["Alex Bahnisch <alexbahnisch@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers=[
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
]
keywords="python boilerplate"

[tool.black]
line-length = 160
target-version = ['py37']

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^4.4"
tox = "^3.12"
flake8 = "^3.7"
mkdocs = "^1.0"
mkdocs-material = "^4.4"
mypy = "^0.701.0"
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[tool.poetry.scripts]
hello_world = "scripts.hello_world:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
